# JNIHook

./: LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/jnihook/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  test_dispatch_table.c  test_jni_hook.c  test_jni_hook.h
app/src/main/java/com/example/jnihook/: DispatchTableHook.kt  MainActivity.kt
app/src/main/res/layout/: activity_dispatch_table_hook.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/jnihook/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
jniTest/: build.gradle
jniTest/src/main/cpp/: CMakeLists.txt  test_jni.c
jniTest/src/main/java/com/example/jnitest/: NativeLib.kt
jniTest/src/test/java/com/example/jnitest/: ExampleUnitTest.kt
jnihook/: build.gradle
jnihook/src/androidTest/java/com/pika/jnihook/: ExampleInstrumentedTest.kt
jnihook/src/main/cpp/: CMakeLists.txt  dispatchtable_hook.c  dl_symbol_search.c  dl_symbol_search.h  jni_hook.c
jnihook/src/main/cpp/include/: dispatchtable_hook.h  jni_hook.h
jnihook/src/main/java/com/pika/jnihook/: JniHook.kt
jnihook/src/test/java/com/pika/jnihook/: ExampleUnitTest.kt
